<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="road_map_name" type="id">123456</item>
</resources>