...
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="My Plans"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/save_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="Save"
                android:textColor="@color/white" />

...
